// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageList component should match snapshot of active list 1`] = `
<DocumentFragment>
  <div
    class="text-selection-section"
  >
    <div
      class="language-name-list"
    >
      <div
        class="pull-down-refresh"
        style="height: 0px; max-height: 0;"
      >
        <span
          style="text-align: center; width: 100%;"
        >
          Pull to Refresh
        </span>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Azerbaijani, North"
      >
        <h4
          class=""
        >
          AZƏRBAYCAN - ( Azerbaijani, North )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Aari"
      >
        <h4
          class=""
        >
          Aari
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Abau"
      >
        <h4
          class=""
        >
          Abau
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Abiji"
      >
        <h4
          class=""
        >
          Abiji
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Abun"
      >
        <h4
          class=""
        >
          Abun
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Aceh"
      >
        <h4
          class=""
        >
          Aceh
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Achagua"
      >
        <h4
          class=""
        >
          Achagua
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Acholi"
      >
        <h4
          class=""
        >
          Acholi
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Achuar-Shiwiar"
      >
        <h4
          class=""
        >
          Achuar-Shiwiar
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Aché"
      >
        <h4
          class=""
        >
          Aché
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Achi"
      >
        <h4
          class=""
        >
          Achí - ( Achi )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Achi de Cubulco"
      >
        <h4
          class=""
        >
          Achí, Cubulco - ( Achi de Cubulco )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Adele"
      >
        <h4
          class=""
        >
          Adele
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Adioukrou"
      >
        <h4
          class=""
        >
          Adioukrou
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Adzera"
      >
        <h4
          class=""
        >
          Adzera
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Agta, Dupaninan"
      >
        <h4
          class=""
        >
          Agarabi - ( Agta, Dupaninan )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Agta, Dupaninan"
      >
        <h4
          class=""
        >
          Agta, Dupaninan
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Agta, Pahanan"
      >
        <h4
          class=""
        >
          Agta, Pahanan
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Awakateko"
      >
        <h4
          class=""
        >
          Aguacateco - ( Awakateko )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="English: USA"
      >
        <h4
          class="active-language-name"
        >
          English - ( English: USA )
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LanguageList component should match snapshot of active list with an applied filter 1`] = `
<DocumentFragment>
  <div
    class="text-selection-section"
  >
    <div
      class="language-name-list"
    >
      <div
        class="pull-down-refresh"
        style="height: 0px; max-height: 0;"
      >
        <span
          style="text-align: center; width: 100%;"
        >
          Pull to Refresh
        </span>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="English: USA"
      >
        <h4
          class="active-language-name"
        >
          English - ( English: USA )
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Abun"
      >
        <h4
          class=""
        >
          Abun
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Abau"
      >
        <h4
          class=""
        >
          Abau
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Acholi"
      >
        <h4
          class=""
        >
          Acholi
        </h4>
      </div>
      <div
        class="language-name"
        role="button"
        tabindex="0"
        title="Aceh"
      >
        <h4
          class=""
        >
          Aceh
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
